fix: add AnonymousAccess